<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/settings_insertIP_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_insertIP_title"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            android:textColor="?attr/textcolor" />

        <EditText
            android:id="@+id/settings_insertIP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/settings_insertIP_hint"
            android:textColor="?attr/textcolor"
            android:textColorHint="#999999"
            android:inputType="text"
            android:autofillHints="192.168.1.118"/>

        <TextView
            android:id="@+id/settings_insertPort_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/settings_insertPort_title"
            android:textSize="@dimen/paragraph_size"
            android:textStyle="bold"
            android:textColor="?attr/textcolor" />

        <EditText
            android:id="@+id/settings_insertPort"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#999999"
            android:textColor="?attr/textcolor"
            android:hint="@string/settings_insertPort_hint"
            android:autofillHints="8080"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/settings_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textColor="?attr/textcolor"
            android:text="@string/settings_switch_title" />

    </LinearLayout>

</ScrollView>